# fp2022

./: .gitignore  README.md  detect_latest.sh  exam.md  find_clones.py  tasks.md
Bash/: Bash.opam  README.md  REPL.ml  dune  dune-project
Bash/demos/: demoInterpret.ml  demoParse.ml  dune  interpretTests.t  interpretVanillaBashTest.t  parsingTests.t
Bash/lib/: ast.ml  dune  interpret.ml  interpret.mli  parser.ml  parser.mli  utils.ml  utils.mli
CSharpOOP/: CSharpOOP.opam  README.md  REPL.ml  dune  dune-project
CSharpOOP/demos/: InterpreterTest.ml  classLoaderTest.ml  classLoaderTest.t  dune  interpreterTest.t  newClassLoaderTest.ml  newClassLoaderTest.t  newInterpreterTest.ml  newInterpreterTest.t  newParserTest.ml  newParserTest.t  parserTest.ml  parserTest.t  parserTestPack.ml  parserTestPack.t  prettyPrinterTest.ml  prettyPrinterTest.t
CSharpOOP/lib/: ast.ml  ast.mli  classLoader.ml  classLoader.mli  dune  interpreter.ml  interpreter.mli  keyMap.ml  keyMap.mli  operators.ml  operators.mli  parser.ml  parser.mli  prettyPrinter.ml  prettyPrinter.mli  resultMonad.ml  resultMonad.mli  supportTypes.ml
Golang/: Golang.opam  INTERPRET.ml  README.md  dune  dune-project  interpret.t
Golang/examples/: fact_rec.go  global_var_order.go  hello_world.go  var_default.go
Golang/lib/: ast.ml  ast.mli  ast_utils.ml  ast_utils.mli  channel.ml  channel.mli  dune  eval.ml  eval.mli  find_decl.ml  find_decl.mli  ident.ml  ident.mli  interpret.ml  interpret.mli  lookup.ml  lookup.mli  parse.ml  parse.mli  pass.ml  pass.mli  print_builtin.ml  print_builtin.mli  termination_check.ml  termination_check.mli  typecheck.ml  typecheck.mli
Lua/: Lua.opam  README.md  REPL.ml  dune  dune-project
Lua/demos/: demoInterp.ml  demoInterp.t  demoParse.ml  demoParse.t  dune  hofTests.t  scopeTests.t  tableTests.t
Lua/lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  utils.ml  utils.mli
Make/: .gitignore  Make.opam  README.md  dune-project
Make/demo/: demoInterpret.ml  demoParse.ml  dune  interpret.t
Make/lib/: ast.ml  dune  interpret.ml  interpret.mli  parser.ml  parser.mli  parser_wo_tests.ml
Menhir/: Menhir.opam  README.md  REPL.ml  dune  dune-project
Menhir/demos/: demoInterpret.ml  demoParse.ml  dune  interpretTests.t  parseTests.t
Menhir/lib/: ast.ml  dune  interpret.ml  interpret.mli  lexer.ml  lexer.mli  parser.mly
OCaml-with-variants/demos/: dune
OCamlADT/: OCamlADT.opam  README.md  REPL.ml  dune  dune-project
OCamlADT/demo/: demo.ml  demo.t  dune
OCamlADT/lib/: ast.ml  dune  infer.ml  infer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  printer.ml  printer.mli  typing.ml  typing.mli
OCamlLabeledArgs/: OCamlLabeledArgs.opam  README.md  REPL.ml  dune  dune-project
OCamlLabeledArgs/demos/: demoSingle.ml  demoSingle.t  dune
OCamlLabeledArgs/lib/: dune  errors.ml  errors.mli  infer.ml  infer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  parsetree.ml  parsetree.mli  prettyprint.ml  prettyprint.mli  repl.ml  repl.mli  tests.ml  tests.mli  typedtree.ml  typedtree.mli
OCamlPrintf/: OCamlPrintf.opam  README.md  dune-project
OCamlPrintf/demos/: demo.ml  dune  tests.t
OCamlPrintf/lib/: ast.ml  dune  inferencer.ml  interpret.ml  interpret.mli  parser.ml  parser.mli  pp.ml  typing.ml
OCamlWithEffects/: OCamlWithEffects.opam  README.md  REPL.ml  dune-project
OCamlWithEffects/demos/: demo.ml  demo.t  dune
OCamlWithEffects/lib/: InterpreterPP.ml  Pprintast.ml  ast.mli  dune  inferencer.ml  interpret.ml  parser.ml  parser.mli  printer.ml  stdlib.ml  typing.ml  util.ml
OcamlObj/: OcamlObj.opam  README.md  dune  dune-project
OcamlObj/lib/: ast.ml  dune  parser.ml  parser.mli  parsertest.ml  parsertest.mli
Pascal/: .ocamlformat  Pascal.opam  README.md  REPL.ml  dune  dune-project
Pascal/lib/: ast.ml  ast.mli  dune  eval.ml  eval.mli  exceptions.ml  exceptions.mli  imArray.ml  imArray.mli  interpreter.ml  interpreter.mli  keyMap.ml  keyMap.mli  monadic.ml  monadic.mli  parser.ml  parser.mli  vTypeBasics.ml  vTypeBasics.mli  varLoader.ml  varLoader.mli  worlds.ml  worlds.mli
Prolog/: Makefile  Prolog.opam  README.md  REPL.ml  dune  dune-project
Prolog/demos/: dune  repl.t
Prolog/lib/: ast.ml  db.ml  dune  interpret.ml  parser.ml  parser.mli  print.ml  tests.ml  types.ml  unify.ml  utils.ml
Ruby/: INTERPRET.ml  Makefile  README.md  Ruby.opam  classes.t  dune  dune-project  functions.t  interpret.t  std_constructions.t
Ruby/examples/: arith_op.rb  bool_op.rb  builtin_methods.rb  builtin_types.rb  classes.rb  combinators.rb  conditional.rb  fibonacci.rb  functions.rb  lambda.rb  loop_factorial.rb  rec_factorial.rb  while_loop.rb
Ruby/lib/: ast.mli  builtinops.ml  builtinops.mli  dune  environment.ml  environment.mli  interpret.ml  interpret.mli  lexer.ml  parser.ml  parser.mli  stdlib.ml  stdlib.mli  tests.ml  utils.ml  utils.mli
RubyTheSequel/: README.md  RubyTheSequel.opam  dune-project
RubyTheSequel/demos/: demoInterpret.ml  dune  interpretTests.t
RubyTheSequel/lib/: ast.ml  dune  interpret.ml  interpret.mli  interpretMonadFailInf.ml  parser.ml  parser.mli
SQL/: README.md  REPL.ml  SQL.opam  dune  dune-project
SQL/demos/: demoParse.ml  demoQueryGen.ml  dune  parsingTests.t  querygenTests.t
SQL/lib/: Pprintnode.ml  ast.ml  dune  interpret.ml  interpret.mli  meta.ml  meta.mli  parser.ml  parser.mli  relation.ml  relation.mli  tests.ml  utils.ml
SQLyd/: Makefile  README.md  REPL.ml  SQLyd.opam  commands.txt  dune  dune-project  select_commands.txt
SQLyd/csv_files/: Persons_main.csv  user1_title.csv
SQLyd/data_gen/: database_loader.py  requirements.txt  setup3sb.py  start_3sb.py
SQLyd/lib/: controller.ml  controller.mli  dune  helper.ml  helper.mli  parser.ml  parser.mli  rep.ml  rep.mli  save.ml  save.mli  tokenizer.ml  tokenizer.mli  tree.ml  tree.mli  type.ml
SQLyd/test/: README.md  dune  expr_test.ml  parser_test.ml  save_test.ml  (+1 more)
Scheme_delim_cc/: .gitignore  .ocamlinit  Makefile  Scheme_delim_cc.opam  dune  dune-project
asm/: REPL.ml  asm.opam  dune  dune-project
(+241 files in other folders)
