(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name REPL)
 (public_name CSharpOOP.Repl)
 (modules REPL)
 (libraries CSharpOOP.Lib str)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(cram
 (deps
  demos/parserTest.exe
  demos/newParserTest.exe
  demos/parserTestPack.exe
  demos/newClassLoaderTest.exe
  demos/classLoaderTest.exe
  demos/interpreterTest.exe
  demos/newInterpreterTest.exe))
