(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Alimov Pavel Gennadievich")

(maintainers "st076209@student.spbu.ru")

(bug_reports "not specified")

(homepage "not specified")

(package
 (name CSharpOOP) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "CSharpOOP")
 (description
  "C# with interfaces, keyword new and access modifiers")
 (version 0.1)
 (depends
  dune
  opal
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_show
  (ocamlformat :build)
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))