(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Denis Porsev")

(maintainers "Denis Porsev")

(bug_reports "https://github.com/bahbyega/fp2022")

(homepage "https://github.com/bahbyega/fp2022")

(package
 (name OCamlLabeledArgs) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for a subset of OCaml with labeled arguments")
 (description
  "TODO: A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  stdio
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
