(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Danila Pechenev" "Ilya Dudnikov")

(maintainers "Danila Pechenev" "Ilya Dudnikov")

(package
 (name OCamlWithEffects)
 (synopsis "OCaml with effects")
 (description
  "OCaml with effects")  ; TODO
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
