(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ilya Utkin")

(maintainers "Ilya Utkin")

(bug_reports "https://github.com/illided/fp2022/issues")

(homepage "https://github.com/illided/fp2022")

(package
 (name Ruby)
 (synopsis "An interpreter for language Ruby")
 (description
  "Simple Ruby interpreter written in Ocaml. Supports simple arithmetic expressions, conditions, loops and custom functions")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
