(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name parserTest)
 (modules parserTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name parserTestPack)
 (modules parserTestPack)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name newParserTest)
 (modules newParserTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name classLoaderTest)
 (modules classLoaderTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name newClassLoaderTest)
 (modules newClassLoaderTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name interpreterTest)
 (modules interpreterTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name newInterpreterTest)
 (modules newInterpreterTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name prettyPrinterTest)
 (modules prettyPrinterTest)
 (libraries CSharpOOP.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))
