(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(library
 (name csharpoop_lib)
 (public_name CSharpOOP.Lib)
 (modules
  Ast
  KeyMap
  Parser
  ResultMonad
  Interpreter
  ClassLoader
  Operators
  PrettyPrinter)
 (libraries opal ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_show ppx_deriving.eq)))
