(library
 (name golang_lib)
 (public_name Golang.Lib)
 (libraries base angstrom threads)
 (modules
  Channel
  Ast
  Ident
  Ast_utils
  Parse
  Pass
  Lookup
  Find_decl
  Typecheck
  Termination_check
  Eval
  Interpret)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.ord))
 (inline_tests))
