(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries OCaml-with-variants.OCamli))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries OCaml-with-variants.OCamli))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries OCaml-with-variants.OCamli stdio))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe ../REPL.exe))
