(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(library
 (name pascal_lib)
 (public_name Pascal.Lib)
 (modules
  KeyMap
  ImArray
  Exceptions
  Ast
  Parser
  VTypeBasics
  Eval
  VarLoader
  Interpreter)
 (modules_without_implementation Ast)
 (libraries base opal ppx_show.runtime)
 (preprocess
  (pps ppx_expect ppx_show))
 (inline_tests))
